--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "husky": "^7.0.2",
     "jest": "^27.5.1",
     "jest-cli": "^27.5.1",
+    "nodemon": "^3.1.7",
     "prettier": "^2.3.2",
     "pretty-quick": "^3.1.1",
     "serve": "^13.0.0",
