--- a/angular-app/Dockerfile
+++ b/angular-app/Dockerfile
@@ -4,10 +4,10 @@ WORKDIR /app
 COPY package*.json ./
 RUN npm ci
 COPY . .
-RUN npm run build
+RUN npm run build:single-spa:angular-app
 
 # Production stage
 FROM nginx:alpine
-COPY --from=build /app/dist/angular-app /usr/share/nginx/html
+COPY --from=build /app/dist/angular-app-single /usr/share/nginx/html
 EXPOSE 80
 CMD ["nginx", "-g", "daemon off;"]
