--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@app/root-config",
   "scripts": {
-    "start": "webpack serve --port 9000 --env isLocal",
+    "start": "webpack serve --port 9000 --env isLocal --host 0.0.0.0",
     "lint": "eslint src --ext js,ts,tsx",
     "test": "cross-env BABEL_ENV=test jest --passWithNoTests",
     "format": "prettier --write .",
