--- a/dashboard/Dockerfile
+++ b/dashboard/Dockerfile
@@ -9,6 +9,7 @@ RUN npm run build:single-spa:dashboard
 # Nginx stage
 FROM nginx:alpine
 RUN rm -rf /usr/share/nginx/html/*
+COPY default.conf /etc/nginx/conf.d/default.conf
 COPY --from=build /app/dist/dashboard/ /usr/share/nginx/html/
 EXPOSE 80
 CMD ["nginx", "-g", "daemon off;"]
