include source maps in builds, setup mfe routing from login to react mfe

--- a/angular-app/angular.json
+++ b/angular-app/angular.json
@@ -42,7 +42,7 @@
               ],
               "optimization": true,
               "outputHashing": "none",
-              "sourceMap": false,
+              "sourceMap": true,
               "namedChunks": false,
               "extractLicenses": true,
               "vendorChunk": false,
