--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,20 @@
 services:
+  postgres:
+    image: pgvector/pgvector:pg16
+    ports:
+      - "5432:5432"
+    environment:
+      POSTGRES_DB: ragdb
+      POSTGRES_USER: raguser
+      POSTGRES_PASSWORD: ragpassword
+    volumes:
+      - postgres-data:/var/lib/postgresql/data
+    healthcheck:
+      test: ["CMD-SHELL", "pg_isready -U $$POSTGRES_USER"]
+      interval: 5s
+      timeout: 5s
+      retries: 5
+
   root-config:
     build: .
     ports: ["9000:9000"]
@@ -17,5 +33,11 @@ services:
 
   backend:
     build: ./python-backend
-    env_file: ./python-backend/app/.env   
+    env_file: ./python-backend/app/.env
+    depends_on:
+      postgres:
+        condition: service_healthy
     ports: ["8000:8000"]
+
+volumes:
+  postgres-data:
