--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -38,13 +38,33 @@ services:
     volumes:
       - ./python-backend/app:/app/app
     command: uvicorn app.main:app --host 0.0.0.0 --port 8000 --reload
+    environment:
+      MINIO_ENDPOINT: minio:9000
+      MINIO_ACCESS_KEY: minioadmin
+      MINIO_SECRET_KEY: minioadmin
+      MINIO_BUCKET: documents
     depends_on:
       postgres:
         condition: service_healthy
+      minio:
+        condition: service_started
     ports: ["8000:8000"]
+
+  minio:
+    image: minio/minio
+    command: server /data --console-address ":9001"
+    environment:
+      MINIO_ROOT_USER: minioadmin
+      MINIO_ROOT_PASSWORD: minioadmin
+    ports:
+      - "9000:9000"
+      - "9001:9001"
+    volumes:
+      - minio-data:/data
 
 
       #docker compose -f docker-compose.dev.yml up` for development with live reload
 
 volumes:
   postgres-data:
+  minio-data:
