--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -35,10 +35,30 @@ services:
   backend:
     build: ./python-backend
     env_file: ./python-backend/app/.env
+    environment:
+      MINIO_ENDPOINT: minio:9000
+      MINIO_ACCESS_KEY: minioadmin
+      MINIO_SECRET_KEY: minioadmin
+      MINIO_BUCKET: documents
     depends_on:
       postgres:
         condition: service_healthy
+      minio:
+        condition: service_started
     ports: ["8000:8000"]
+
+  minio:
+    image: minio/minio
+    command: server /data --console-address ":9001"
+    environment:
+      MINIO_ROOT_USER: minioadmin
+      MINIO_ROOT_PASSWORD: minioadmin
+    ports:
+      - "9000:9000"
+      - "9001:9001"
+    volumes:
+      - minio-data:/data
 
 volumes:
   postgres-data:
+  minio-data:
