--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -43,8 +43,21 @@ services:
         condition: service_healthy
     ports: ["8000:8000"]
 
+  minio:
+    image: minio/minio
+    ports:
+      - "9001:9000"
+      - "9002:9001"
+    environment:
+      MINIO_ROOT_USER: minioadmin
+      MINIO_ROOT_PASSWORD: minioadmin
+    command: server /data --console-address ":9001"
+    volumes:
+      - minio-data:/data
+
 
       #docker compose -f docker-compose.dev.yml up` for development with live reload
 
 volumes:
   postgres-data:
+  minio-data:
