--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -40,5 +40,18 @@ services:
         condition: service_healthy
     ports: ["8000:8000"]
 
+  minio:
+    image: minio/minio
+    ports:
+      - "9001:9000"
+      - "9002:9001"
+    environment:
+      MINIO_ROOT_USER: minioadmin
+      MINIO_ROOT_PASSWORD: minioadmin
+    command: server /data --console-address ":9001"
+    volumes:
+      - minio-data:/data
+
 volumes:
   postgres-data:
+  minio-data:
