--- a/react-app/package.json
+++ b/react-app/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@react-app/react-app",
   "scripts": {
-    "start": "webpack serve",
+    "start": "webpack serve --host 0.0.0.0 --port 8080",
     "start:standalone": "webpack serve --env standalone",
     "build": "concurrently npm:build:*",
     "build:webpack": "webpack --mode=production",
