--- a/dashboard/package.json
+++ b/dashboard/package.json
@@ -1,6 +1,9 @@
 {
   "name": "dashboard",
   "version": "0.0.0",
+  "engines": {
+    "node": ">=20"
+  },
   "scripts": {
     "ng": "ng",
     "start": "ng serve --project dashboard",
