--- a/package.json
+++ b/package.json
@@ -1,5 +1,8 @@
 {
   "name": "@app/root-config",
+  "engines": {
+    "node": ">=20"
+  },
   "scripts": {
     "start": "webpack serve --port 9000 --env isLocal",
     "lint": "eslint src --ext js,ts,tsx",
