--- a/react-app/package.json
+++ b/react-app/package.json
@@ -48,6 +48,7 @@
     "react-dom": "^17.0.2",
     "single-spa-react": "^4.3.1",
     "@mui/material": "^5.15.15",
+    "@mui/icons-material": "^5.15.15",
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0"
   }
