--- a/react-app/default.conf
+++ b/react-app/default.conf
@@ -1,7 +1,7 @@
 server {
     listen 80;
     add_header 'Access-Control-Allow-Origin' '*' always;
-    add_header 'Access-Control-Allow-Methods' 'GET, OPTIONS';
+    add_header 'Access-Control-Allow-Methods' 'GET, OPTIONS, POST, PUT, DELETE';
     add_header 'Access-Control-Allow-Headers' '*';
     root /usr/share/nginx/html;
     try_files $uri $uri/ =404;
