--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -55,6 +55,8 @@ services:
     depends_on:
       postgres:
         condition: service_healthy
+      minio:
+        condition: service_healthy
     ports: ["8000:8000"]
 
   minio:
@@ -62,12 +64,17 @@ services:
     ports:
       - "9001:9000"
       - "9002:9001"
-    environment:
-      MINIO_ROOT_USER: minioadmin
-      MINIO_ROOT_PASSWORD: minioadmin
+    # environment:
+    #   MINIO_ROOT_USER: minioadmin
+    #   MINIO_ROOT_PASSWORD: minioadmin
     command: server /data --console-address ":9001"
     volumes:
       - minio-data:/data
+    healthcheck:
+      test: ["CMD", "curl", "-f", "http://localhost:9000/minio/health/ready"]
+      interval: 5s
+      timeout: 3s
+      retries: 30
 
 
       #docker compose -f docker-compose.dev.yml up` for development with live reload
